--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,5 +1,5 @@
-$primary: #798268;
-$bg: darken($primary, 20%);
+$primary: #798568;
+$bg: darken($primary, 25%);
 $main: darken($primary, 10%);
 $highlight: lighten($primary, 5%);
 
@@ -16,13 +16,14 @@ body {
 
 .grid {
    margin: auto;
-   --s: 5vw;
-   --m: 1px;
+   --count: 10;
+   --s: 6vw;
+   --m: 0px;
    --f: calc(1.732 * var(--s) + 4 * var(--m) - 1px);
    font-size: 0;
    display: flex;
-   width: calc(var(--s) * 10 + var(--m) * 20 + 1.8px);
-   overflow: hidden;
+   flex-wrap: wrap;
+   width: calc(var(--s) * (var(--count) + 0.5) + var(--m) * var(--count) * 2);
 
    .spot {
       width: var(--s);
@@ -31,32 +32,34 @@ body {
       display: inline-block;
       font-size: initial;
       clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
-      background: $main;
       margin-bottom: calc(var(--m) - var(--s) * 0.2885);
       position: relative;
+      transition: all 0.1s;
 
       &:hover {
-         background: $highlight;
+         transform: scale(1.2);
+         z-index: 10;
+         filter: grayscale(0.4);
       }
 
       &.disabled {
          pointer-events: none;
-         background: $bg;
+         opacity: 0;
+      }
+
+      &.even {
+         transform: translateX(calc(50% + var(--m)));
+
+         &:hover {
+            transform: scale(1.2) translateX(calc(50% + var(--m)));
+         }
       }
    }
+}
 
-   .container {
-      margin-left: calc(var(--s) * -0.5);
-      margin-right: calc(var(--s) * -1 + 5px);
-      //margin-top: calc(var(--f) * -0.5);
-      margin-bottom: calc(var(--s) * -0.58);
-
-      &::before {
-         content: '';
-         width: calc(var(--s) / 2 + var(--m));
-         float: left;
-         height: 120%;
-         shape-outside: repeating-linear-gradient(#0000 0 calc(var(--f) - 3px), #000 0 var(--f));
-      }
-   }
+img {
+   width: 100%;
+   height: auto;
+   scale: 1.4;
+   padding-top: 5px;
 }
