--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -17,22 +17,19 @@ body {
 .grid {
    margin: auto;
    --count: 10;
-   --s: 120px;
-   --m: 10px;
-   --f: calc(1.732 * var(--s) + 4 * var(--m) - 1px);
+   --s: 110px;
    display: flex;
    flex-wrap: wrap;
-   width: calc(var(--s) * var(--count) * 1.5);
-   gap: 0px calc(var(--s) / 2);
-   transform: translateX(calc(var(--s) * -0.5));
+   width: calc(var(--s) * var(--count));
+   gap: 0px calc(var(--s) * 0.433);
 
    .spot {
       width: var(--s);
-      height: calc(var(--s) * 0.866);
+      height: calc(var(--s) / 0.866);
       position: relative;
-      clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+      clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
       transition: all 0.1s;
-      margin-block: calc(var(--s) * -0.2165);
+      margin: calc(var(--s) * -0.148) calc(var(--s) * -0.2165);
 
       &.disabled {
          pointer-events: none;
@@ -40,7 +37,7 @@ body {
       }
 
       &.even {
-         transform: translateX(calc(75%));
+         transform: translateX(calc(50%));
       }
 
       > * {
@@ -56,11 +53,21 @@ img {
 
 .map.hoverable {
    .spot:not(.mismatch):hover {
-      transform: scale(1.2);
+      transform: scale(1);
       z-index: 10;
 
       &.even {
-         transform: scale(1.2) translateX(calc(62.5%));
+         transform: scale(1) translateX(calc(50%));
+      }
+
+      ::after {
+         background-color: #0004;
+         content: '';
+         position: absolute;
+         left: 0;
+         top: 0;
+         bottom: 0;
+         right: 0;
       }
    }
 }
@@ -77,7 +84,7 @@ img {
    right: 0;
    bottom: 0;
    height: 100px;
-   background: #606459;
+   background: #7f8576;
    z-index: 100;
    border-top: solid 4px black;
 
@@ -141,4 +148,76 @@ img {
    width: 250px;
    font-size: 20px;
    color: white;
+}
+
+.card-select {
+   position: fixed;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   background-color: #0006;
+   z-index: 100;
+}
+
+.resource {
+   width: 32px;
+   position: absolute;
+   left: 50%;
+   top: 2px;
+   transform: translate(-50%, 0%);
+   border-radius: 50%;
+   background: #fff9;
+   padding: 2px;
+   border: solid 2px black;
+   pointer-events: none;
+}
+
+.number {
+   position: absolute;
+   left: 50%;
+   bottom: 0%;
+   transform: translate(-50%, 0%);
+   pointer-events: none;
+
+   width: 32px;
+   height: 20px;
+   background-color: #fff9;
+   border-top-left-radius: 22px;
+   border-top-right-radius: 22px;
+   border: 2px solid black;
+   border-bottom: 0;
+   text-align: center;
+   line-height: 22px;
+   font-weight: 900;
+}
+
+.resources-list {
+   position: fixed;
+   top: 0;
+   left: 0;
+
+   .row {
+      display: flex;
+
+      img {
+         height: 48px;
+         background-color: #fff9;
+         border: 2px solid black;
+         border-radius: 50%;
+         margin: 5px;
+
+         &.small {
+            height: 38px;
+            width: 38px;
+            padding: 5px;
+         }
+      }
+
+      span {
+         margin: auto;
+         font-size: 32px;
+         color: #efefef;
+      }
+   }
 }
