--- a/src/assets/scss/dice.scss
+++ b/src/assets/scss/dice.scss
@@ -19,7 +19,7 @@
       padding: 0;
    }
 
-   button {
+   button:not(:disabled) {
       cursor: pointer;
       transition: all 0.2s;
       animation: glow 2s infinite;
