Add gain animation

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -139,6 +139,21 @@ img {
    font-weight: 900;
 }
 
+.gain {
+   position: absolute;
+   left: 50%;
+   bottom: 50%;
+   transform: translate(-50%, 50%);
+   pointer-events: none;
+   color: white;
+
+   font-weight: bold;
+   animation: ease-out fadeIn 1s forwards;
+   text-shadow: #000 0 0 1px, #000 0 0 2px, #000 0 0 3px, #000 0 0 4px;
+   border-radius: 50px;
+   padding: 5px;
+}
+
 .resources-list {
    position: fixed;
    top: 0;
@@ -179,4 +194,24 @@ img {
    transform: translate(5px, -100%);
    opacity: 0.5;
    font-weight: bold;
+}
+
+@keyframes fadeIn {
+   0% {
+      opacity: 0;
+      font-size: 1px;
+      transform: translate(-50%, 70%);
+   }
+   20% {
+      opacity: 1;
+   }
+   60% {
+      opacity: 1;
+   }
+   100% {
+      opacity: 0;
+      font-size: 60px;
+      margin-top: -30px;
+      transform: translate(-50%, 0%);
+   }
 }
