--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,6 +8,7 @@ $highlight: lighten($primary, 5%);
 @import './clock.scss';
 @import './field.scss';
 @import './locales.scss';
+@import './spot.scss';
 
 body {
    margin: 0;
@@ -106,54 +107,6 @@ img {
    color: white;
 }
 
-.resource {
-   width: 32px;
-   position: absolute;
-   left: 50%;
-   top: 2px;
-   transform: translate(-50%, 0%);
-   border-radius: 50%;
-   background: #fff9;
-   padding: 2px;
-   border: solid 2px black;
-   pointer-events: none;
-}
-
-.number {
-   position: absolute;
-   left: 50%;
-   bottom: 0%;
-   transform: translate(-50%, 0%);
-   pointer-events: none;
-
-   font-family: 'Courier New', Courier, monospace;
-   width: 32px;
-   height: 20px;
-   background-color: #fff9;
-   border-top-left-radius: 22px;
-   border-top-right-radius: 22px;
-   border: 2px solid black;
-   border-bottom: 0;
-   text-align: center;
-   line-height: 22px;
-   font-weight: 900;
-}
-
-.gain {
-   position: absolute;
-   left: 50%;
-   bottom: 50%;
-   transform: translate(-50%, 50%);
-   pointer-events: none;
-   color: white;
-
-   font-weight: bold;
-   animation: ease-out fadeIn 1s forwards;
-   text-shadow: #000 0 0 1px, #000 0 0 2px, #000 0 0 3px, #000 0 0 4px;
-   border-radius: 50px;
-   padding: 5px;
-}
-
 .resources-list {
    position: fixed;
    top: 0;
@@ -194,24 +147,4 @@ img {
    transform: translate(5px, -100%);
    opacity: 0.5;
    font-weight: bold;
-}
-
-@keyframes fadeIn {
-   0% {
-      opacity: 0;
-      font-size: 1px;
-      transform: translate(-50%, 70%);
-   }
-   20% {
-      opacity: 1;
-   }
-   60% {
-      opacity: 1;
-   }
-   100% {
-      opacity: 0;
-      font-size: 60px;
-      margin-top: -30px;
-      transform: translate(-50%, 0%);
-   }
 }
