--- a/src/assets/scss/clock.scss
+++ b/src/assets/scss/clock.scss
@@ -28,11 +28,20 @@ $width: 48px;
       transform: rotate(-90deg);
    }
 
+   .r-135 img {
+      transform: rotate(135deg);
+   }
+
    &.time-0 {
       animation: rotate1 1s forwards;
       img:not(.t0) {
          filter: contrast(0.5);
          background: #fff0;
+      }
+
+      .r-135 img {
+         filter: contrast(1);
+         background: #f999;
       }
    }
    &.time-1 {
@@ -48,6 +57,10 @@ $width: 48px;
          filter: contrast(0.5);
          background: #fff0;
       }
+      .r-45 img {
+         filter: contrast(1);
+         background: #f999;
+      }
    }
    &.time-3 {
       animation: rotate4 1s forwards;
@@ -55,6 +68,21 @@ $width: 48px;
          filter: contrast(0.5);
          background: #fff0;
       }
+   }
+
+   .r-45,
+   .r-135 {
+      display: flex;
+
+      img {
+         width: 24px;
+         height: 24px;
+      }
+   }
+
+   .r-45 img {
+      margin-top: auto;
+      margin-left: auto;
    }
 }
 
