--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,6 +13,7 @@ $highlight: lighten($primary, 5%);
 body {
    margin: 0;
    font-family: Verdana;
+   user-select: none;
 }
 
 #app {
@@ -134,6 +135,28 @@ img {
          margin: auto 0;
          font-size: 32px;
          color: #efefef;
+      }
+
+      .red {
+         background-color: #f999;
+      }
+
+      &:not(.notEnough) {
+         .minus {
+            display: none;
+         }
+      }
+
+      &.notEnough {
+         img {
+            background-color: #f999;
+         }
+      }
+
+      .minus {
+         padding-left: 5px;
+         font-size: 16px;
+         color: #f77;
       }
    }
 }
