Add game over messages

--- a/src/assets/scss/card-select.scss
+++ b/src/assets/scss/card-select.scss
@@ -1,15 +1,7 @@
 .card-select {
-   position: fixed;
-   top: 0;
-   left: 0;
-   right: 0;
-   bottom: 0;
-   background-color: #0006;
-   z-index: 100;
-
    display: flex;
 
-   .backdrop {
+   .inner {
       margin: auto;
       display: flex;
       gap: 15px;
