--- a/src/assets/scss/menu.scss
+++ b/src/assets/scss/menu.scss
@@ -16,9 +16,9 @@
       line-height: 100px;
       margin: 0;
       font-family: Hex;
-      letter-spacing: 7px;
+      letter-spacing: 5px;
       padding-top: 10px;
-      transform: scaleX(2);
+      transform: scaleX(2.5);
       background: #7f8576;
       border-bottom: solid #000 4px;
       margin-bottom: 100px;
@@ -83,7 +83,9 @@
 
       img {
          width: 100%;
-         height: auto;
+         height: 150px;
+         object-fit: cover;
+
          border-top-left-radius: 7px;
          border-top-right-radius: 7px;
          border-bottom: solid 2px black;
