--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,13 +22,25 @@ body {
    font-family: Verdana;
    user-select: none;
    overflow: hidden;
+   --zoom: 1;
+   zoom: var(--zoom);
 }
 
 #app {
-   width: 100%;
-   height: 100vh;
+   width: calc(100dvw / var(--zoom));
+   height: calc(100dvh / var(--zoom));
    display: flex;
    background: $bg;
+}
+
+body.rotate #app {
+   width: calc(100dvh / var(--zoom));
+   height: calc(100dvw / var(--zoom));
+   transform: rotate(90deg);
+   transform-origin: bottom left;
+   top: calc(-100dvw / var(--zoom));
+   left: 0;
+   position: absolute;
 }
 
 .disabled {
@@ -91,10 +103,10 @@ img {
    position: fixed;
    text-align: center;
    font-weight: 600;
-   background: #000e;
-   border: solid 1px white;
+   background: #000c;
+   border: solid 1px #fffc;
    border-radius: 2px;
-   color: white;
+   color: #fffe;
    padding: 5px;
    transition: all 0.4s;
    z-index: 100;
@@ -238,4 +250,8 @@ img {
          box-shadow: 0 0 4px 1px #fff;
       }
    }
+}
+
+.text-light {
+   color: #fffe;
 }
